# coinami-pro

./: README.md  README.md~
client/: README.md  cli.py  gui.py  info.json  setup.py
client/core/: AESCipher.py  __init__.py  api.py  blockchain.py  client.conf  custom.py  miner.py  networking.py  peer_recieve.py  peers_check.py  threads.py  tools.py  transactions.py
client/core/exe/: client_executable.py  output.bam  output.sorted.bam  server_executable.py
client/core/pt/: bci.py  deterministic.py  main.py  transaction.py
client/ui/: About.ui  AboutUI.py  AddContact.ui  AddContactUI.py  Address.ui  AddressUI.py  BlockInfo.ui  BlockInfoUI.py  ChooseWallet.ui  ChooseWalletUI.py  Encrypt.ui  EncryptUI.py  Initial.ui  InitialUI.py  Main.ui  MainUI.py  SignVerify.ui  SignVerifyUI.py  __init__.py  darkorange.stylesheet  icons_rc.py  myfile.py  open.ui  stylesheet.qss
client/ui/icons/: MainUI.py  icon_rc.py  icons.qrc
server/: CMakeLists.txt  mux.key
server/api/: app.py  db_initializer.py  server.conf
server/api/view/: statistics.html
server/include/demux/: Demux.h
server/include/mux/: Mux.h
server/include/utility/: BamReader.h  BamWriter.h  CryptoHandler.h  DBHandler.h  FastQReader.h  FastQSequence.h  FastQWriter.h
server/lib/cryptopp563/: deneme.key  denemepub.key
server/samples/: decoy.1.fq  decoy.2.fq  decoy.bam  decoy.bam.bai  extract.py  sample1.1.fq  sample1.2.fq  sample2.1.fq  sample2.2.fq  sample3.1.fq  sample3.2.fq
server/src/demux/: CMakeLists.txt  Demux.cpp
server/src/mux/: CMakeLists.txt  Mux.cpp
server/src/utility/: BamReader.cpp  BamWriter.cpp  CMakeLists.txt  CryptoHandler.cpp  DBHandler.cpp  FastQReader.cpp  FastQSequence.cpp  FastQWriter.cpp
server/test/demux_test/: CMakeLists.txt  demux_test.cpp
server/test/mux_test/: CMakeLists.txt  mux_test.cpp
server/test/utility_test/: CMakeLists.txt  bamReader_test.cpp  cryptoHandler_test.cpp  dbHandler_test.cpp  fastQReader_test.cpp  utility_test.cpp
